added extra reset button for mobile

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
             <p ><span id="player2">Player 2</span> : <span id="p2-score"></span></p>
         </div>
     </div>
+    <button class="reset-button" id="mobile-reset-btn">Reset</button>
     <script src="ticTacToe.js" id="script"></script>
 </body>
 
