resolve problem with mobile reset button

--- a/index.html
+++ b/index.html
@@ -33,17 +33,17 @@
             <div class="outer outer1">
                 <div class="player1 player"><i class="fa-solid fa-user"></i></div>
             </div>
-            <p><span id="player1">Player 1</span> : <span id="p1-score"></span></p>
+            <p><span id="player1"> Player 1</span> : <span id="p1-score"></span></p>
         </div>
         <button class="reset-button">Reset</button>
         <div class="outer-container">
             <div class="outer outer2">
                 <div class="player2 player"><i class="fa-solid fa-user"></i></div>
             </div>
-            <p ><span id="player2">Player 2</span> : <span id="p2-score"></span></p>
+            <p><span id="player2"> Player 2</span> : <span id="p2-score"></span></p>
         </div>
     </div>
-    <button class="reset-button" id="mobile-reset-btn">Reset</button>
+    <button class="reset-button mobile-reset-btn disp-responsive" id="mobile-reset-btn">Reset</button>
     <script src="ticTacToe.js" id="script"></script>
 </body>
 
