--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
     <!-- code for confirm model -->
 
     <!-- Modal -->
-    <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog"
+    <div class="modal fade my-modal" id="exampleModalCenter" tabindex="-1" role="dialog"
         aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="modal-content">
+            <div class="modal-content my-modal-dialog">
                 <div class="modal-header">
                     <h5 class="modal-title" id="exampleModalLongTitle">Do you want to Set Player Name?</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close" id="close-btn">
+                    <button type="button" class="close close-btn" data-dismiss="modal" aria-label="Close" id="close-btn">
                         <span aria-hidden="true">X</span>
                     </button>
                 </div>
@@ -66,8 +66,41 @@
                     click Close or Cancel for setting Default Name
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal" id="name-cancel-btn">Cancel</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal"
+                        id="cnfrm-cancel-btn">Cancel</button>
                     <button type="button" class="btn btn-primary" id="name-set-btn">Set Name</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Modal -->
+    <div class="modal fade my-modal" id="setModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
+        aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content my-modal-dialog">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLongTitle">Enter Player Name :</h5>
+                    <button type="button" class="close close-btn" data-dismiss="modal" aria-label="Close" id="name-close-btn">
+                        <span aria-hidden="true">X</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-row form-style">
+                            <div class="col">
+                                <input type="text" class="form-control" placeholder="First Player name" id="playerName1" autocomplete="off">
+                            </div>
+                            <div class="col">
+                                <input type="text" class="form-control" placeholder="Second Player name" id="playerName2"autocomplete="off">
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal"
+                        id="set-cancel-btn">Cancel</button>
+                    <button type="button" class="btn btn-primary" id="save-btn">Save</button>
                 </div>
             </div>
         </div>
