--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content my-modal-dialog">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLongTitle">Do you want to Set Player Name?</h5>
+                    <h5 class="modal-title" id="exampleModalLongTitle">Set Player Name?</h5>
                     <button type="button" class="close close-btn" data-dismiss="modal" aria-label="Close" id="close-btn">
                         <span aria-hidden="true">X</span>
                     </button>
                 </div>
                 <div class="modal-body">
-                    click Close or Cancel for setting Default Name
+                    click Close or Cancel for Default Name
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal"
